# mcp_chatbot_demo

./: README.md  app.py  dot-env  pyproject.toml
.streamlit/: config.toml
mcp/: api_mcp_server.py  db_mcp_server.py  mocks_mcp_server.py
modules/: agent_manager.py  agent_runner.py  chat_renderer.py  error_handler.py  page_config.py  session_manager.py  sidebar_controls.py  spinner.py  ui_helpers.py
